# opencode-ocr

./: .pre-commit-config.yaml  README.md  deepseek-ocr-implementation-checklist.md  deepseek-ocr-tool-implementation-plan.md  deploy-tool.sh  opencode-ocr-subagent-plan.md  pyproject.toml
deepseek-ocr-testing/: config.py  deepseek_ocr.py  run_dpsk_ocr_image.py  run_dpsk_ocr_pdf.py  test_bank_statement.py  test_llamaswap_ocr.py  test_ocr.py
deepseek-ocr-testing/deepencoder/: clip_sdpa.py  sam_vary_sdpa.py
deepseek-ocr-testing/output/: bank-statement-ocr.md
deepseek-ocr-testing/process/: image_process.py
pdf-ocr/: README.md  deploy-tool.sh  pyproject.toml  test_backend_verification.py  test_deploy_script.py  test_documentation.py  test_environment.py  test_multipage_pdf.py
pdf-ocr/tool/: .env.example  pdf-ocr.ts  pdf_ocr_backend.py  test_pdf_ocr_backend.py
tests/: __init__.py  test_backend.py  test_documentation.py  test_integration.py
