[project]
name = "opencode-ocr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
